fixed scrollbar issue & email as optional

--- a/misc/Feedback-Js-sdk/src/gigatester.css
+++ b/misc/Feedback-Js-sdk/src/gigatester.css
@@ -1977,7 +1977,7 @@ justify-content: center;
   width: 300px;
 }
 #gigatester_button_container .gigatester-controls .gigatester-controls-form {
-    /* height: calc(100vh - 230px); */
+    /* max-height: calc(100vh - 30vh); */
     overflow: auto;
 }
 #gigatester-audio-timer-btn{
@@ -1996,7 +1996,7 @@ justify-content: center;
 }
 #gigatester_button_container .gigatester-controls .gigatester-controls-form {
   /* height: calc(100vh - 230px); */
-  overflow: auto;
+  overflow: hidden;
 }
 /* .gigatester-dialog-scroll{
   overflow: auto;
@@ -2044,7 +2044,8 @@ border-radius: 5px;
   min-width: 0;
   min-height: 0;
   max-width: none;
-  max-height: none;
+  overflow-y: auto;
+  max-height: calc(100vh - 27vh);
   margin: 0;
   padding: 0;
   outline: none;
@@ -2054,6 +2055,23 @@ border-radius: 5px;
   position: relative;
   display: block;
 }
+#gigatester_button_container .gigatester-controls .gigatester-controls-options::-webkit-scrollbar {
+  /* height: calc(100vh - 230px); */
+  width: 7px;
+  margin-left: 3px;
+  }
+  #gigatester_button_container .gigatester-controls .gigatester-controls-options::-webkit-scrollbar-track  {
+  /* height: calc(100vh - 230px); */
+  background: transparent;
+  border-radius: 5px;
+  box-shadow: inset 0 0 6px rgba(94, 94, 94, 0.3);
+  border: none;
+  }
+  #gigatester_button_container .gigatester-controls .gigatester-controls-options::-webkit-scrollbar-thumb  {
+    /* height: calc(100vh - 230px); */
+    background: #a7a7a7;
+    border-radius: 5px;
+    }
 #gigatester_button_container .gigatester-controls .gigatester-disclaimer {
   width: auto;
   height: auto;
